[package]
  name = "dimensioned"
  version = "0.6.0"
  authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
  documentation = "http://paholg.com/dimensioned"
  repository = "https://github.com/paholg/dimensioned"
  readme = "README.md"
  license = "MIT/Apache-2.0"
  build = "src/build/mod.rs"
  categories = ["no-std", "science"]
  keywords = ["no_std", "units", "dimensions", "quantities"]
  description = """Compile-time dimensional analysis for various unit systems using Rust's type system.

Dimensioned aims to build on Rust's safety features by adding unit safety with no runtime cost. In
addition, it aims to be as easy to use as possible, hopefully making things easier for you not just
by avoiding bugs but also by making it clear what units things are.

Never again should you need to specify units in a comment!"""

[lib]
  name = "dimensioned"

[features]
  default = []
  oibit = []
  spec = []
  test = ["clippy", "quickcheck", "quickcheck_macros", "approx", "oibit", "spec", "serde", "serde_test"]

[dependencies]
  typenum = "1.6.0"
  generic-array = "0.5.1"
  clippy = { version = "0.0.135", optional = true }
  quickcheck = { version = "0.4.1", optional = true }
  quickcheck_macros = { version = "0.4.1", optional = true }
  approx = { version = "0.1.1", optional = true, features = ["no_std"] }
  serde = { version = "1.0.0", optional = true }
  serde_test = { version = "1.0.0", optional = true }
