[package]
  name = "dimensioned"
  version = "0.8.0"
  edition = "2021"
  authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
  documentation = "https://docs.rs/dimensioned"
  repository = "https://github.com/paholg/dimensioned"
  readme = "README.md"
  license = "MIT/Apache-2.0"
  build = "src/build/mod.rs"
  categories = ["no-std", "science"]
  keywords = ["no_std", "units", "dimensions", "quantities"]
  description = """Compile-time dimensional analysis for various unit systems using Rust's type system.

Dimensioned aims to build on Rust's safety features by adding unit safety with no runtime cost. In
addition, it aims to be as easy to use as possible, hopefully making things easier for you not just
by avoiding bugs but also by making it clear what units things are.

Never again should you need to specify units in a comment!"""

[lib]
  name = "dimensioned"

[features]
  default = ["std"]
  oibit = []
  spec = []
  std = [ "serde?/std" ]
  nightly = []
  test = [ "approx", "clapme", "serde", "serde_test", "rand"]

[dependencies]
  approx = { version = "0.5.1", optional = true, default-features = false }
  clapme = { version = "0.1.1", optional = true }
  auto-args = { version = "0.2.4", optional = true }
  generic-array = "0.14.0"
  num-traits = { version = "0.2.5", default-features = false }
  serde = { version = "1.0.0", optional = true, default-features = false }
  serde_test = { version = "1.0.0", optional = true }
  rand = { version = "0.8.5", optional = true }
  typenum = "1.6.0"
  
[dev-dependencies]
  quickcheck = { version = "0.8.2" }
